youfull/objects/Sales_Activity_Row__c.object
<CustomObject>
    <fields>
        <fullName>CC_AMT__c</fullName>
        <label>CC_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_CNT__c</fullName>
        <label>CC_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_TXT__c</fullName>
        <label>CC_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Market_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Market Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Title_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Title Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ldr_AMT__c</fullName>
        <label>Ldr_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ldr_CNT__c</fullName>
        <label>Ldr_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ldr_TXT__c</fullName>
        <label>Ldr_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LdtTitle1_AMT__c</fullName>
        <label>LdtTitle1_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LdtTitle1_CNT__c</fullName>
        <label>LdtTitle1_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LdtTitle1_TXT__c</fullName>
        <label>LdtTitle1_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LdtTitle2_AMT__c</fullName>
        <label>LdtTitle2_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LdtTitle2_CNT__c</fullName>
        <label>LdtTitle2_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LdtTitle2_TXT__c</fullName>
        <label>LdtTitle2_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LdtTitle3_AMT__c</fullName>
        <label>LdtTitle3_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LdtTitle3_CNT__c</fullName>
        <label>LdtTitle3_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LdtTitle3_TXT__c</fullName>
        <label>LdtTitle3_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LdtTitleUQ_AMT__c</fullName>
        <label>LdtTitleUQ_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LdtTitleUQ_CNT__c</fullName>
        <label>LdtTitleUQ_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LdtTitleUQ_TXT__c</fullName>
        <label>LdtTitleUQ_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_AMT__c</fullName>
        <label>NC_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_CNT__c</fullName>
        <label>NC_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_TXT__c</fullName>
        <label>NC_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonLdr_AMT__c</fullName>
        <label>NonLdr_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonLdr_CNT__c</fullName>
        <label>NonLdr_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonLdr_TXT__c</fullName>
        <label>NonLdr_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odd_Row__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Odd Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_AMT__c</fullName>
        <label>PC_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_CNT__c</fullName>
        <label>PC_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_TXT__c</fullName>
        <label>PC_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_AMT__c</fullName>
        <label>Plan_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_CNT__c</fullName>
        <label>Plan_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_TXT__c</fullName>
        <label>Plan_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Label__c</fullName>
        <label>Row Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_AMT__c</fullName>
        <label>SPPY_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_CNT__c</fullName>
        <label>SPPY_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_TXT__c</fullName>
        <label>SPPY_TXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Activity Row DO NOT USE</label>
    <nameField>
        <displayFormat>SAR-{0000000}</displayFormat>
        <label>Sales Activity Row Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Activity Rows</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>